# calibcamodo

./: CMakeLists.txt  README.md  README.md~  debug.launch  debug.launch~  package.xml  rviz.rviz
aruco/src/: board.cpp  boarddetector.cpp  cameraparameters.cpp  cvdrawingutils.cpp  marker.cpp  markerdetector.cpp
include/: Config.h  Dataset.h  Frame.h  Measure.h  Solver.h  Type.h
include/aruco/: arucofidmarkers.h
src/: Dataset.cpp  Frame.cpp  Frame.h  Mark.cpp  Mark.h  Measure.cpp  Measure.h  Solver.cpp  Solver.h  Type.cpp  adapter.cpp  adapter.h  calib_aruco.cpp  calib_orb.cpp  calib_orb_filter.cpp  config.cpp  config.h  dataset.cpp  dataset.h  frame.cpp  frame.h  main.cpp  mark.cpp  mark.h  measure.cpp  measure.h  solver.cpp  solver.h  stdafx.h  type.cpp  type.h
src/aruco/: aruco_simple.cpp  arucofidmarkers.cpp  cvdrawingutils.h  exports.h
src/core/: adapter.cpp  adapter.h  config.cpp  config.h  cvmath.cpp  cvmath.h  dataset.cpp  dataset.cpp.autosave  dataset.h  frame.cpp  frame.h  maker_aruco.cpp  maker_aruco.h  maker_base.cpp  maker_base.h  maker_orb.cpp  maker_orb.h  makeronline_base.cpp  makeronline_base.h  makeronline_orb.cpp  makeronline_orb.h  mapmark.cpp  mapmark.h  mappoint.cpp  mappoint.h  mark.h  math_cv.cpp  math_cv.h  math_opt.cpp  math_opt.h  measure.cpp  measure.h  measurepool.cpp  measurepool.h  point.cpp  point.h  solver.cpp  solver.h  solver_base.cpp  solver_base.h  (+12 more)
src/g2o/: edge_calibcamodo.cpp  edge_calibcamodo.h  edge_xyz_calibcamodo.cpp  edge_xyz_calibcamodo.h  g2o_api.cpp  g2o_api.h  g2o_math.cpp  g2o_math.h
src/orb/: ORBVocabulary.h  ORBextractor.cpp  ORBextractor.h  ORBmatcher.cpp  ORBmatcher.h
src/ros/: mappublish.cpp  mappublish.h
